<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- ActionBar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="@dimen/app_bar_elevation"
        android:background="@color/primary"/>

    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/query_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:elevation="@dimen/app_bar_elevation"
        android:layout_below="@+id/main_toolbar">

        <!-- Followed https://github.com/rengwuxian/MaterialEditText/blob/master/sample/src/main/res/layout/activity_main.xml -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="72dp"
            android:paddingRight="16dp"
            tools:ignore="RtlHardcoded">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/lower_bound_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lower_bound_hint"
                android:textSize="34sp"
                android:inputType="number"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="9"
                app:met_helperText="@string/lower_bound_helper"
                app:met_primaryColor="?colorAccent"
                app:met_singleLineEllipsis="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/upper_bound_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/upper_bound_hint"
                android:textSize="34sp"
                android:inputType="number"
                app:met_baseColor="@android:color/white"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="9"
                app:met_helperText="@string/upper_bound_helper"
                app:met_primaryColor="?colorAccent"
                app:met_singleLineEllipsis="true"
                android:paddingBottom="@dimen/big_padding" />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <net.i2p.android.ext.floatingactionbutton.FloatingActionButton
        android:id="@+id/query_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fab_icon="@drawable/ic_action_search"
        app:fab_colorNormal="@color/accent"
        app:fab_colorPressed="@color/primary_light"
        android:elevation="@dimen/fab_elevation"
        android:layout_below="@+id/query_toolbar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/half_fab_dimens" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/query_toolbar">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:visibility="gone"
            android:id="@+id/empty_linear_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/empty_text_view"
                android:drawableTop="@drawable/ic_suggest"
                android:id="@+id/empty_text_view"
                android:layout_marginTop="@dimen/big_padding"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progress_linear_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                tools:text="Found 2222 primes in 1000 seconds"
                android:id="@+id/result_text_view"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/small_padding"
                tools:ignore="RtlHardcoded" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progress_bar"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/small_padding" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/bottom_text_size"
                android:textColor="@color/primary"
                tools:text="50% (10/20)"
                android:id="@+id/progress_text_view"
                android:layout_marginTop="@dimen/inner_components_spacing"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fastScrollAlwaysVisible="true"
            android:fastScrollEnabled="true"
            android:id="@+id/list_view"
            android:divider="@android:color/transparent"
            android:listSelector="@android:color/transparent"/>
    </LinearLayout>
</RelativeLayout>
